# RobotsMovesPractic

ProjectX/: CMakeLists.txt
ProjectX/FirstServer/: CMakeLists.txt  site.html  site.txt
ProjectX/FirstServer/inc/: Handler.h  SimpleSerial.h
ProjectX/FirstServer/src/: Handler.cpp  main.cpp
